# mimesis

./: .env.example  .gitignore  Makefile  README.md  mimesis.code-workspace  pyproject.toml
.azure/: deployment-plan.md
.github/: copilot-instructions.md
.github/agents/: cicd.agent.md  coding.agent.md  solution-architect.agent.md
.github/docs/: agent-knowledge-base.md  mimesis-architecture.md  runbook.md  session-terraform-lock-fix.md
.github/workflows/: _deploy-bc.yml  _smoke-bc01.yml  _smoke-bc02.yml  _tf-apply.yml  create-issue-branch.yml  dev-rollout.yml  dev-smoke-only.yml  dev-smoke.yml  lint-test.yml  main_mimesis-dev-fn-plan.yml  terraform-validate.yml
functions/video-discovery/: function_app.py
functions/video-ingestion/: function_app.py
infrastructure/terraform/: .terraform.lock.hcl  backend.hcl  dev.tfvars  imports.tf  locals.tf  main.tf  outputs.tf  prod.tfvars  provider.tf  rbac.tf  secrets.tfvars.example  variables.tf
src/mimesis/: __init__.py
src/mimesis/shared/: __init__.py  observability.py
src/mimesis/video_discovery/: __init__.py  config.py  function_app.py
src/mimesis/video_ingestion/: __init__.py  (+2 more)
tests/: conftest.py
tests/integration/: test_discovery_ledger_integration.py  test_service_bus_integration.py  test_youtube_api_integration.py
tests/unit/: test_domain_models.py  test_media_processor.py  test_video_discovery_config.py  test_video_discovery_function.py  test_video_discovery_service.py  test_video_ingestion_config.py  test_video_ingestion_function.py  test_video_ingestion_service.py  test_youtube_api_client.py
(+33 files in other folders)
